--- a/data/blog/未央搭配.md
+++ b/data/blog/未央搭配.md
@@ -5,10 +5,7 @@ lastmod: '2023/6/7'
 tags: [DNF]
 draft: false
 summary: '很多兄弟都加入到了云上长安摸金搬砖，但是云上系统对新手有点复杂，为此分享《云上摸金诀》系列'
-images:
-  [
-    'https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/7e62d47750f444c4a6bc73cb8d8c2427~tplv-k3u1fbpfcp-watermark.image?',
-  ]
+images: ['https://th.bing.com/th/id/OIP.iGZSGu_kPzIXHytey9wZCQHaDt?w=296&h=174&c=7&r=0&o=5&pid=1.7']
 layout: PostLayout
 ---
 
