feat:增加部分文章

--- a/data/blog/未央搭配.md
+++ b/data/blog/未央搭配.md
@@ -1,31 +1,27 @@
 ---
-title: '未央'
+title: '未央简图一览'
 date: '2023/6/7'
 lastmod: '2023/6/7'
 tags: [DNF]
 draft: false
-summary: '很多兄弟都加入到了云上长安摸金搬砖，但是云上系统对新手有点复杂，为此分享《云上摸金诀》系列'
+summary: '不同司南玉容门槛，C号爬楼号混子号角色装备+玉容搭配，9阶以上单人洗票司南概率+12阶段洗票概率推荐，宝箱地图一览，'
 images: ['https://th.bing.com/th/id/OIP.iGZSGu_kPzIXHytey9wZCQHaDt?w=296&h=174&c=7&r=0&o=5&pid=1.7']
 layout: PostLayout
 ---
 
-很多兄弟都加入到了云上长安摸金搬砖，但是云上系统复杂，对新手有点复杂，为此分享《云上摸金诀》系列，已经完成了“第 1 期:基础、第 2 期:爬楼、第 3 期：互票、第 4 期:开车、第 5 期:加群、第 6 期：套玉、第 7 期:防骗”，接下来，应粉丝需求，推出第 8 期《云上摸金诀玉荣搭配》，希望能够帮助到兄弟们，兄弟们有什么疑问，也可以提出，秀儿整理后为大家解答，后续第 9 期和第 10 期，将推出“实战篇”。
+# 合理搭配玉荣
 
-![](https://pic2.zhimg.com/v2-41f5dd404c5dcd1a3a45ca379f331691_b.jpg)
-
-# 合理搭配玉荣，提升刷图能力
-
-在云上未央宫副本，装备好、打造好，不一定能够刷图快，需要合理搭配玉荣，提升刷图能力，玉荣搭配合理，可以大大加速通关速度，避免枯燥乏味的爬楼，秀儿就个人的做法，和兄弟们分享。
+在云上未央宫副本，装备好、打造好，不一定能够刷图快，需要合理搭配玉荣，提升刷图能力，玉荣搭配合理，可以大大加速通关速度
 
 【1】混子号
 
-在未央宫发展，不可避免的会准备几个混子号，一种是去“坐 2-5 阶垃圾车”的超级混子，只需要玉荣值凑够 5 阶门槛即可，对玉荣没有任何要求，进入副本跑图即可，获得的玉荣分解换 1 阶司南、获得的辟邪玉，可交易的出售回本，不能交易的留下洗司南，通常一车会有近 60 个辟邪玉，没玉洗票了，可用超级混子号，去坐垃圾车。
+在未央发展，不可避免的会准备几个混子号，一种是去“坐 2-5 阶垃圾车”的超级混子，只需要玉荣值凑够 5 阶门槛即可，对玉荣没有任何要求，进入副本跑图即可，获得的玉荣分解换 1 阶司南、获得的辟邪玉，可交易的出售回本，不能交易的留下洗司南，通常一车会有近 60 个辟邪玉，没玉洗票了，可用超级混子号，去坐垃圾车。混子号主要注重的是三速(移动速度)，霸体玉容和抗冰冻玉容。
 
 ![](https://pic4.zhimg.com/v2-4a61cc87a7ae2dba72f9edb05115261f_b.jpg)
 
 【控制免疫】副本中有“冰冻”、“眩晕”等控制的司南词条的时候，角色被冰冻不能动，有“控制免疫”，就可以随便跑位，不怕被冻。
 
-第二种是互票“6-8 阶”、“9-11 阶”的混子角色、同样道理，队伍不需要你输出，只需要凑够对应玉荣值即可，进入副本跑图即可。不过有一点，互票“6-8 阶”的时候，混子需要出 9 张票，C 和奶只要 7 张票，互票 9 阶或者以上，大家都是 8 张票;也就是说，在互票序列中，混子比主 C 吃香，不要怕没人要。
+第二种是互票“6-8 阶”、“9-11 阶”的混子角色、同样道理，队伍不需要你输出，只需要凑够对应玉荣值即可，进入副本跑图即可。不过有一点，互票“6-8 阶”的时候，混子需要出 9 张票，C 和奶只要 7 张票，互票 9 阶或者以上，大家都是 8 张票;。
 
 ![](https://pic4.zhimg.com/v2-a5e5a8336e082133c754e55c5f2871ab_b.jpg)
 
@@ -37,7 +33,7 @@ layout: PostLayout
 
 ![](https://pic2.zhimg.com/v2-a52dbc27d53931fc1d8d0e6eb788c511_r.jpg)
 
-玉荣的属性，五花八门，秀儿推荐四大值钱的、强力的词条属性：
+玉荣的属性，五花八门，推荐四大强力的词条属性：
 
 【技能伤害增加】增加面板技能攻击力;
 
