--- a/data/blog/未央入门基础简图一览.md
+++ b/data/blog/未央入门基础简图一览.md
@@ -1,8 +1,8 @@
 ---
-title: '未央简图一览'
+title: '未央入门基础简图一览'
 date: '2023/6/7'
 lastmod: '2023/6/7'
-tags: [DNF]
+tags: [DNF，未央]
 draft: false
 summary: '不同司南玉容门槛，C号爬楼号混子号角色装备+玉容搭配，9阶以上单人洗票司南概率+12阶段洗票概率推荐，宝箱地图一览，'
 images: ['https://th.bing.com/th/id/OIP.iGZSGu_kPzIXHytey9wZCQHaDt?w=296&h=174&c=7&r=0&o=5&pid=1.7']
@@ -55,6 +55,25 @@ layout: PostLayout
 
 ![](https://pic1.zhimg.com/v2-7b5dd188d52194d54963b0a3fe4a3820_b.jpg)
 
-# 小结
+# 不同阶的玉容力一览
 
-云上摸金“玉荣搭配”，混子号的目的是“凑够玉荣就是胜利”、对玉荣属性没有要求;爬楼号的目的是“1-8 阶轻松快速通关”、赚钱号的目的是“9-18 阶如履平地”，对玉荣的要求较高，可以直接拍卖“3 个技能红色玉荣”，保证伤害，其余的慢慢合成。
+1-10 阶
+
+400
+
+8 \* 50 40
+
+# 1-10 阶地形图一览
+
+# 出售价格一览
+
+1. 2-8 单人
+2. 9-13 单人
+3. 2-8 组队
+4. 9-13 组队
+
+# 试炼票
+
+1. 2-11 组队
+   1. 2-7
+   2. 8-11
