--- a/data/blog/游戏/地下城与勇士DNF/未央/未央入门基础简图一览.md
+++ b/data/blog/游戏/地下城与勇士DNF/未央/未央入门基础简图一览.md
@@ -2,7 +2,7 @@
 title: '未央入门基础简图一览'
 date: '2023/6/7'
 lastmod: '2023/6/7'
-tags: [DNF，未央]
+tags: [DNF-未央]
 draft: false
 summary: '不同司南玉容门槛，C号爬楼号混子号角色装备+玉容搭配，9阶以上单人洗票司南概率+12阶段洗票概率推荐，宝箱地图一览，'
 images: ['https://th.bing.com/th/id/OIP.iGZSGu_kPzIXHytey9wZCQHaDt?w=296&h=174&c=7&r=0&o=5&pid=1.7']
