--- a/data/blog/投资/场外基金与场内基金费用比较.md
+++ b/data/blog/投资/场外基金与场内基金费用比较.md
@@ -10,15 +10,19 @@ layout: PostLayout
 ---
 
 **场外基金与场内基金**  
-1. 场外 0.8% / 年
-2. 场内一手 万 0.5%
+1. 场外链接 0.8% / 年
+2. 场内一手 万 0.5  
 
 一笔1W:场内与场外放一年
 
 费用:
-1. 10000 * 0.8 % = 800
-2. 10000 * 0.5 % = 500
+1. 10000 * 0.4% = 400
+2. 1元
 
 
-**开户**
-东方财富证券  国商证券
+**查看一下当前户的交易佣金费用及使用范围**
+东方财富证券    w2.5 
+国商证券          
+国金
+
+
