--- a/data/blog/技术/文章/1. 程序员学习路线与资源合集.md
+++ b/data/blog/技术/文章/1. 程序员学习路线与资源合集.md
@@ -1,4 +1,13 @@
-#
+---
+title: ' 程序员学习路线与资源合集'
+date: '2024/6/7'
+lastmod: '2024/6/7'
+tags: [技术]
+draft: false
+summary: 'AI写代码'
+images: []
+layout: PostLayout
+---
 
 写这篇文章的目的在于分享一些个人觉得质量比较高的前端资源，可以减少初学者面对学习资源的信息差，保持输入的是流行和前沿的技术，资源不限于 **知名开发者 / 博主，文档，视频，书籍，演示网站，工具** 等，`除了书籍外，资源都是免费 / 开源的`， 同时**尽量保证资源是支持中英文的**，如果只有英文但啃得费劲，可以借助类似 [沉浸式翻译](https://link.juejin.cn?target=https%3A%2F%2Fimmersivetranslate.com%2F 'https://immersivetranslate.com/') 之类的工具提高阅读效率和理解文章。
 
@@ -39,14 +48,7 @@
 
 前两者是 `React官方` 推荐的 2 个 JavaScript 教程, 特别是《现代 JavaScript 教程》，对初学者非常友好，也不乏深度，可谓真正地涵盖从入门到高阶。其他的也同样是比较知名且质量得到认可的，非常值得一看。 除了阮一峰的 ES6 外，其他都是英文原著，后人再翻译成中文，也许到这里你或许明白为什么我之前一直在强调英语的重要性，建议有能力阅读英文原版，或者读中文感觉不对劲回去翻看英文，这样能确保准确无误。
 
-> [javascript.info/](https://link.juejin.cn?target=https%3A%2F%2Fjavascript.info%2F 'https://javascript.info/') - 中文： [现代 JavaScript 教程](https://link.juejin.cn?target=https%3A%2F%2Fzh.javascript.info%2F 'https://zh.javascript.info/')
-> ![JSinfo.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/647f86a3d4ae46d0ac6275c132309042~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2288&h=1294&s=301824&e=png&b=fefefe) > [developer.mozilla.org/en-US/](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.mozilla.org%2Fen-US%2F 'https://developer.mozilla.org/en-US/') - 中文：[Web 开发技术 | MDN](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.mozilla.org%2Fzh-CN%2Fdocs%2FWeb 'https://developer.mozilla.org/zh-CN/docs/Web')
-> ![MDN.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/8ba1df1d94b44d49985310e39e22c18a~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=550010&e=png&a=1&b=fdfdfd) > [Deep Dive Into Modern Web Development](https://link.juejin.cn?target=https%3A%2F%2Ffullstackopen.com%2Fen%2F 'https://fullstackopen.com/en/') - 中文：[全栈公开课](https://link.juejin.cn?target=https%3A%2F%2Ffullstackopen.com%2Fzh%2F 'https://fullstackopen.com/zh/')
-> ![modern_web.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/6f651f41cb034514b3677ab155a3ea3f~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=648056&e=png&a=1&b=fefefe) > [Microsoft - Web Dev for Beginners](https://link.juejin.cn?target=https%3A%2F%2Fmicrosoft.github.io%2FWeb-Dev-For-Beginners%2F%23%2F 'https://microsoft.github.io/Web-Dev-For-Beginners/#/') - 中文：[微软官方 - 初学者的 Web 开发课程](https://link.juejin.cn?target=https%3A%2F%2Fmicrosoft.github.io%2FWeb-Dev-For-Beginners%2F%23%2FREADME.zh-cn 'https://microsoft.github.io/Web-Dev-For-Beginners/#/README.zh-cn')
-> ![JSmicrosoft.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/e1af121141184ffabfe46a6755fb28d7~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=572335&e=png&a=1&b=fdfdfd) > [Google - web.dev](https://link.juejin.cn?target=https%3A%2F%2Fweb.dev%2Flearn 'https://web.dev/learn') - 中文：[Google 官方 Web 教程 - web.dev](https://link.juejin.cn?target=https%3A%2F%2Fweb.dev%2Flearn%3Fhl%3Dzh-cn 'https://web.dev/learn?hl=zh-cn')
-> ![google.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/d7ccf6b6b822451c844eabb5501f11ce~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=543914&e=png&a=1&b=ffffff) > [ES6 入门教程 - 阮一峰](https://link.juejin.cn?target=https%3A%2F%2Fes6.ruanyifeng.com%2F 'https://es6.ruanyifeng.com/')
-> ![ES6ruanyifeng.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/91044d58bb5741c4a213cc335a292501~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=810381&e=png&a=1&b=fefefe) > [jsconf](https://link.juejin.cn?target=https%3A%2F%2Fjsconf.com%2F 'https://jsconf.com/')
-> ![jsconf.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/ff12c75117da4dd68c15575749bb38b7~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=578071&e=png&a=1&b=ffffff)
+> [javascript.info/](https://link.juejin.cn?target=https%3A%2F%2Fjavascript.info%2F 'https://javascript.info/') - 中文： [现代 JavaScript 教程](https://link.juejin.cn?target=https%3A%2F%2Fzh.javascript.info%2F 'https://zh.javascript.info/') > ![JSinfo.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/647f86a3d4ae46d0ac6275c132309042~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2288&h=1294&s=301824&e=png&b=fefefe) > [developer.mozilla.org/en-US/](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.mozilla.org%2Fen-US%2F 'https://developer.mozilla.org/en-US/') - 中文：[Web 开发技术 | MDN](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.mozilla.org%2Fzh-CN%2Fdocs%2FWeb 'https://developer.mozilla.org/zh-CN/docs/Web') > ![MDN.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/8ba1df1d94b44d49985310e39e22c18a~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=550010&e=png&a=1&b=fdfdfd) > [Deep Dive Into Modern Web Development](https://link.juejin.cn?target=https%3A%2F%2Ffullstackopen.com%2Fen%2F 'https://fullstackopen.com/en/') - 中文：[全栈公开课](https://link.juejin.cn?target=https%3A%2F%2Ffullstackopen.com%2Fzh%2F 'https://fullstackopen.com/zh/') > ![modern_web.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/6f651f41cb034514b3677ab155a3ea3f~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=648056&e=png&a=1&b=fefefe) > [Microsoft - Web Dev for Beginners](https://link.juejin.cn?target=https%3A%2F%2Fmicrosoft.github.io%2FWeb-Dev-For-Beginners%2F%23%2F 'https://microsoft.github.io/Web-Dev-For-Beginners/#/') - 中文：[微软官方 - 初学者的 Web 开发课程](https://link.juejin.cn?target=https%3A%2F%2Fmicrosoft.github.io%2FWeb-Dev-For-Beginners%2F%23%2FREADME.zh-cn 'https://microsoft.github.io/Web-Dev-For-Beginners/#/README.zh-cn') > ![JSmicrosoft.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/e1af121141184ffabfe46a6755fb28d7~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=572335&e=png&a=1&b=fdfdfd) > [Google - web.dev](https://link.juejin.cn?target=https%3A%2F%2Fweb.dev%2Flearn 'https://web.dev/learn') - 中文：[Google 官方 Web 教程 - web.dev](https://link.juejin.cn?target=https%3A%2F%2Fweb.dev%2Flearn%3Fhl%3Dzh-cn 'https://web.dev/learn?hl=zh-cn') > ![google.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/d7ccf6b6b822451c844eabb5501f11ce~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=543914&e=png&a=1&b=ffffff) > [ES6 入门教程 - 阮一峰](https://link.juejin.cn?target=https%3A%2F%2Fes6.ruanyifeng.com%2F 'https://es6.ruanyifeng.com/') > ![ES6ruanyifeng.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/91044d58bb5741c4a213cc335a292501~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=810381&e=png&a=1&b=fefefe) > [jsconf](https://link.juejin.cn?target=https%3A%2F%2Fjsconf.com%2F 'https://jsconf.com/') > ![jsconf.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/ff12c75117da4dd68c15575749bb38b7~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=578071&e=png&a=1&b=ffffff)
 
 ### TypeScript
 
@@ -55,17 +57,14 @@ TS 的话除了微软官方的文档和 handbook 外，个人觉得最好的 Tut
 > [TypeScript Documentation](https://link.juejin.cn?target=https%3A%2F%2Fwww.typescriptlang.org%2Fdocs%2F 'https://www.typescriptlang.org/docs/') - 无及时中文
 > ![CleanShot 2023-11-25 at 00.18.55.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/a06ccf9af7bb48ebb607fc21c1ca4259~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=527603&e=png&a=1&b=fbfafa) > [The TypeScript Handbook](https://link.juejin.cn?target=https%3A%2F%2Fwww.typescriptlang.org%2Fdocs%2Fhandbook%2Fintro.html 'https://www.typescriptlang.org/docs/handbook/intro.html') - 无及时中文
 > ![CleanShot 2023-11-25 at 00.19.40.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/77e0c57214c341bdb22730b58a0ff357~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=603309&e=png&a=1&b=f9f8f8) > [type-level-typescript.com/](https://link.juejin.cn?target=https%3A%2F%2Ftype-level-typescript.com%2F 'https://type-level-typescript.com/') - 无中文
-> ![type_level.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/e3bca1e2d6ec40b68b99e60a4043b0ff~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=651695&e=png&a=1&b=ffffff) > [TypeScript 教程 - 阮一峰](https://link.juejin.cn?target=https%3A%2F%2Fwangdoc.com%2Ftypescript%2F 'https://wangdoc.com/typescript/')
-> ![TSruanyifeng.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/ffcd9acc35814a2cb6aff79cf22bfc86~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=1030114&e=png&a=1&b=fcfbfb) > [type-challenges: Collection of TypeScript type challenges](https://link.juejin.cn?target=https%3A%2F%2Fgithub.com%2Ftype-challenges%2Ftype-challenges 'https://github.com/type-challenges/type-challenges') - 中文：[类型体操](https://link.juejin.cn?target=https%3A%2F%2Fgithub.com%2Ftype-challenges%2Ftype-challenges%2Fblob%2Fmain%2FREADME.zh-CN.md 'https://github.com/type-challenges/type-challenges/blob/main/README.zh-CN.md')
-> ![type-challenges.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/4eca02dde303485e9508afe9e3a24e99~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=685144&e=png&a=1&b=ffffff) > [TypeHero](https://link.juejin.cn?target=https%3A%2F%2Ftypehero.dev%2F 'https://typehero.dev/') - 无中文
+> ![type_level.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/e3bca1e2d6ec40b68b99e60a4043b0ff~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=651695&e=png&a=1&b=ffffff) > [TypeScript 教程 - 阮一峰](https://link.juejin.cn?target=https%3A%2F%2Fwangdoc.com%2Ftypescript%2F 'https://wangdoc.com/typescript/') > ![TSruanyifeng.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/ffcd9acc35814a2cb6aff79cf22bfc86~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=1030114&e=png&a=1&b=fcfbfb) > [type-challenges: Collection of TypeScript type challenges](https://link.juejin.cn?target=https%3A%2F%2Fgithub.com%2Ftype-challenges%2Ftype-challenges 'https://github.com/type-challenges/type-challenges') - 中文：[类型体操](https://link.juejin.cn?target=https%3A%2F%2Fgithub.com%2Ftype-challenges%2Ftype-challenges%2Fblob%2Fmain%2FREADME.zh-CN.md 'https://github.com/type-challenges/type-challenges/blob/main/README.zh-CN.md') > ![type-challenges.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/4eca02dde303485e9508afe9e3a24e99~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=685144&e=png&a=1&b=ffffff) > [TypeHero](https://link.juejin.cn?target=https%3A%2F%2Ftypehero.dev%2F 'https://typehero.dev/') - 无中文
 > ![CleanShot 2024-01-22 at 11.02.14.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/4ba63a47baec40179a7e9d41b7d906af~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=1383&h=1594&s=517208&e=png&b=fafafa)
 
 ### Node.js
 
 其实就是 **JavaScript**，不过换了个运行时，有区别的地方再具体看官方文档，因为 Node.js 每半年固定发一次大版本，更新速度是比较快的，如果看视频的话要注意版本。
 
-> [Node.js](https://link.juejin.cn?target=https%3A%2F%2Fnodejs.org%2Fen 'https://nodejs.org/en') - 中文：[Node.js 中文网](https://link.juejin.cn?target=https%3A%2F%2Fnodejs.cn%2Fapi%2Findex.html 'https://nodejs.cn/api/index.html')
-> ![CleanShot 2023-11-25 at 17.29.56.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/daedf562ceb0437a9a64f0d90ce408af~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=507152&e=png&a=1&b=fefefe)
+> [Node.js](https://link.juejin.cn?target=https%3A%2F%2Fnodejs.org%2Fen 'https://nodejs.org/en') - 中文：[Node.js 中文网](https://link.juejin.cn?target=https%3A%2F%2Fnodejs.cn%2Fapi%2Findex.html 'https://nodejs.cn/api/index.html') > ![CleanShot 2023-11-25 at 17.29.56.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/daedf562ceb0437a9a64f0d90ce408af~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=507152&e=png&a=1&b=fefefe)
 > 框架：
 
 - [express.js](https://link.juejin.cn?target=https%3A%2F%2Fexpressjs.com%2F 'https://expressjs.com/')
@@ -79,8 +78,7 @@ TS 的话除了微软官方的文档和 handbook 外，个人觉得最好的 Tut
 **官方文档不必多提，主要是加入一些其他进阶相关的文章/书籍**。
 如果是学习框架的话，没有什么比官方文档的说明更详细了。当然，如果你不喜欢看文档，也可以看视频，个人喜好问题，有的人就是看文档学得更快，有的人就是看视频学得更快，无优劣之分，合适就好。但对大多数人来说，视频入门，进阶文档，因为当你知识学习到一定程度，你就会觉得视频啰嗦，明明文档几句话就解释清楚的事情。
 
-> [vuejs.org/](https://link.juejin.cn?target=https%3A%2F%2Fvuejs.org%2F 'https://vuejs.org/') - 中文：[cn.vuejs.org/](https://link.juejin.cn?target=https%3A%2F%2Fcn.vuejs.org%2F 'https://cn.vuejs.org/')
-> ![CleanShot 2023-11-25 at 17.33.54.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/3b6399ec02cf49a19aad8c4810c8e398~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=506644&e=png&a=1&b=fdfdfd)
+> [vuejs.org/](https://link.juejin.cn?target=https%3A%2F%2Fvuejs.org%2F 'https://vuejs.org/') - 中文：[cn.vuejs.org/](https://link.juejin.cn?target=https%3A%2F%2Fcn.vuejs.org%2F 'https://cn.vuejs.org/') > ![CleanShot 2023-11-25 at 17.33.54.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/3b6399ec02cf49a19aad8c4810c8e398~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=506644&e=png&a=1&b=fdfdfd)
 > 其他：
 
 - [Vite - 下一代构建工具](https://link.juejin.cn?target=https%3A%2F%2Fvitejs.dev%2F 'https://vitejs.dev/')
@@ -94,8 +92,7 @@ TS 的话除了微软官方的文档和 handbook 外，个人觉得最好的 Tut
 
 ### React
 
-> [react.dev/](https://link.juejin.cn?target=https%3A%2F%2Freact.dev%2F 'https://react.dev/') - 中文：[zh-hans.react.dev/](https://link.juejin.cn?target=https%3A%2F%2Fzh-hans.react.dev%2F 'https://zh-hans.react.dev/')
-> ![CleanShot 2023-11-25 at 17.36.25.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/e51802c0dc664339845fe959dc7e1d95~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=971236&e=png&a=1&b=ffffff)
+> [react.dev/](https://link.juejin.cn?target=https%3A%2F%2Freact.dev%2F 'https://react.dev/') - 中文：[zh-hans.react.dev/](https://link.juejin.cn?target=https%3A%2F%2Fzh-hans.react.dev%2F 'https://zh-hans.react.dev/') > ![CleanShot 2023-11-25 at 17.36.25.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/e51802c0dc664339845fe959dc7e1d95~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=971236&e=png&a=1&b=ffffff)
 > 其他:
 
 - [React Router - 客户端路由库](https://link.juejin.cn?target=https%3A%2F%2Freactrouter.com%2Fen%2Fmain 'https://reactrouter.com/en/main')
@@ -412,9 +409,3 @@ Medium 是一个内容创作平台， 有许多非常高质量的文章和讨论
 - [Rich Harris - sveltejs
   /rollup 作者](https://link.juejin.cn?target=https%3A%2F%2Ftwitter.com%2FRich_Harris 'https://twitter.com/Rich_Harris')
 - ... 列不完
-
-## 总结
-
-我的分享到此结束，如果对你有些许帮助，希望能够点个赞鼓励支持一下 👍，不胜感激。
-
-</div></article>
