--- a/data/blog/技术/小册/目录.md
+++ b/data/blog/技术/小册/目录.md
@@ -1,7 +1,7 @@
-1. nest 通关秘籍
-2. 前端调试通关秘籍
-3. 深入浅出 vite
-4. 前端可视化入门与实战
+1. 前端调试通关秘籍
+2. nest 通关秘籍
+3. 前端可视化入门与实战
+4. 深入浅出 vite
 5. next.js 开发指南
 6. Kubernetes 从上手到实践
-7. Nuxt.js
+7. 微前端
