--- a/data/blog/技术/写作工具.md
+++ b/data/blog/技术/写作工具.md
@@ -1,12 +1,5 @@
-2. 自动图床
-3. AI 助手
+1.
+2. 自定义图床
+3. AI 助手助写
 4. 自动检测错别字
-5. 多平台分发文章工具
-6. 平台
-   1. 小册 书籍
-   2. 视频网站课程
-7. 国内外访问网站
-   1. github pages
-   2. vercel
-8. 站长工具
-   1. SEO
+5. 支持多平台分发文章
