--- a/data/blog/技术/page/1. 程序员学习路线与资源合集.md
+++ b/data/blog/技术/page/1. 程序员学习路线与资源合集.md
@@ -1,7 +1,7 @@
 ---
-title: ' 程序员学习路线与资源合集'
-date: '2024/6/7'
-lastmod: '2024/6/7'
+title: '程序员学习路线与资源合集'
+date: '2024/6/12'
+lastmod: '2024/6/12'
 tags: [技术]
 draft: false
 summary: '学习路线'
@@ -50,14 +50,7 @@ layout: PostLayout
 
 前两者是 `React官方` 推荐的 2 个 JavaScript 教程, 特别是《现代 JavaScript 教程》，对初学者非常友好，也不乏深度，可谓真正地涵盖从入门到高阶。其他的也同样是比较知名且质量得到认可的，非常值得一看。 除了阮一峰的 ES6 外，其他都是英文原著，后人再翻译成中文，也许到这里你或许明白为什么我之前一直在强调英语的重要性，建议有能力阅读英文原版，或者读中文感觉不对劲回去翻看英文，这样能确保准确无误。
 
-> [javascript.info/](https://link.juejin.cn?target=https%3A%2F%2Fjavascript.info%2F 'https://javascript.info/') - 中文： [现代 JavaScript 教程](https://link.juejin.cn?target=https%3A%2F%2Fzh.javascript.info%2F 'https://zh.javascript.info/')
-> ![JSinfo.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/647f86a3d4ae46d0ac6275c132309042~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2288&h=1294&s=301824&e=png&b=fefefe) > [developer.mozilla.org/en-US/](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.mozilla.org%2Fen-US%2F 'https://developer.mozilla.org/en-US/') - 中文：[Web 开发技术 | MDN](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.mozilla.org%2Fzh-CN%2Fdocs%2FWeb 'https://developer.mozilla.org/zh-CN/docs/Web')
-> ![MDN.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/8ba1df1d94b44d49985310e39e22c18a~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=550010&e=png&a=1&b=fdfdfd) > [Deep Dive Into Modern Web Development](https://link.juejin.cn?target=https%3A%2F%2Ffullstackopen.com%2Fen%2F 'https://fullstackopen.com/en/') - 中文：[全栈公开课](https://link.juejin.cn?target=https%3A%2F%2Ffullstackopen.com%2Fzh%2F 'https://fullstackopen.com/zh/')
-> ![modern_web.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/6f651f41cb034514b3677ab155a3ea3f~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=648056&e=png&a=1&b=fefefe) > [Microsoft - Web Dev for Beginners](https://link.juejin.cn?target=https%3A%2F%2Fmicrosoft.github.io%2FWeb-Dev-For-Beginners%2F%23%2F 'https://microsoft.github.io/Web-Dev-For-Beginners/#/') - 中文：[微软官方 - 初学者的 Web 开发课程](https://link.juejin.cn?target=https%3A%2F%2Fmicrosoft.github.io%2FWeb-Dev-For-Beginners%2F%23%2FREADME.zh-cn 'https://microsoft.github.io/Web-Dev-For-Beginners/#/README.zh-cn')
-> ![JSmicrosoft.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/e1af121141184ffabfe46a6755fb28d7~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=572335&e=png&a=1&b=fdfdfd) > [Google - web.dev](https://link.juejin.cn?target=https%3A%2F%2Fweb.dev%2Flearn 'https://web.dev/learn') - 中文：[Google 官方 Web 教程 - web.dev](https://link.juejin.cn?target=https%3A%2F%2Fweb.dev%2Flearn%3Fhl%3Dzh-cn 'https://web.dev/learn?hl=zh-cn')
-> ![google.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/d7ccf6b6b822451c844eabb5501f11ce~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=543914&e=png&a=1&b=ffffff) > [ES6 入门教程 - 阮一峰](https://link.juejin.cn?target=https%3A%2F%2Fes6.ruanyifeng.com%2F 'https://es6.ruanyifeng.com/')
-> ![ES6ruanyifeng.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/91044d58bb5741c4a213cc335a292501~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=810381&e=png&a=1&b=fefefe) > [jsconf](https://link.juejin.cn?target=https%3A%2F%2Fjsconf.com%2F 'https://jsconf.com/')
-> ![jsconf.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/ff12c75117da4dd68c15575749bb38b7~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=578071&e=png&a=1&b=ffffff)
+> [javascript.info/](https://link.juejin.cn?target=https%3A%2F%2Fjavascript.info%2F 'https://javascript.info/') - 中文： [现代 JavaScript 教程](https://link.juejin.cn?target=https%3A%2F%2Fzh.javascript.info%2F 'https://zh.javascript.info/') > ![JSinfo.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/647f86a3d4ae46d0ac6275c132309042~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2288&h=1294&s=301824&e=png&b=fefefe) > [developer.mozilla.org/en-US/](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.mozilla.org%2Fen-US%2F 'https://developer.mozilla.org/en-US/') - 中文：[Web 开发技术 | MDN](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.mozilla.org%2Fzh-CN%2Fdocs%2FWeb 'https://developer.mozilla.org/zh-CN/docs/Web') > ![MDN.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/8ba1df1d94b44d49985310e39e22c18a~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=550010&e=png&a=1&b=fdfdfd) > [Deep Dive Into Modern Web Development](https://link.juejin.cn?target=https%3A%2F%2Ffullstackopen.com%2Fen%2F 'https://fullstackopen.com/en/') - 中文：[全栈公开课](https://link.juejin.cn?target=https%3A%2F%2Ffullstackopen.com%2Fzh%2F 'https://fullstackopen.com/zh/') > ![modern_web.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/6f651f41cb034514b3677ab155a3ea3f~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=648056&e=png&a=1&b=fefefe) > [Microsoft - Web Dev for Beginners](https://link.juejin.cn?target=https%3A%2F%2Fmicrosoft.github.io%2FWeb-Dev-For-Beginners%2F%23%2F 'https://microsoft.github.io/Web-Dev-For-Beginners/#/') - 中文：[微软官方 - 初学者的 Web 开发课程](https://link.juejin.cn?target=https%3A%2F%2Fmicrosoft.github.io%2FWeb-Dev-For-Beginners%2F%23%2FREADME.zh-cn 'https://microsoft.github.io/Web-Dev-For-Beginners/#/README.zh-cn') > ![JSmicrosoft.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/e1af121141184ffabfe46a6755fb28d7~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=572335&e=png&a=1&b=fdfdfd) > [Google - web.dev](https://link.juejin.cn?target=https%3A%2F%2Fweb.dev%2Flearn 'https://web.dev/learn') - 中文：[Google 官方 Web 教程 - web.dev](https://link.juejin.cn?target=https%3A%2F%2Fweb.dev%2Flearn%3Fhl%3Dzh-cn 'https://web.dev/learn?hl=zh-cn') > ![google.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/d7ccf6b6b822451c844eabb5501f11ce~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=543914&e=png&a=1&b=ffffff) > [ES6 入门教程 - 阮一峰](https://link.juejin.cn?target=https%3A%2F%2Fes6.ruanyifeng.com%2F 'https://es6.ruanyifeng.com/') > ![ES6ruanyifeng.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/91044d58bb5741c4a213cc335a292501~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=810381&e=png&a=1&b=fefefe) > [jsconf](https://link.juejin.cn?target=https%3A%2F%2Fjsconf.com%2F 'https://jsconf.com/') > ![jsconf.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/ff12c75117da4dd68c15575749bb38b7~tplv-k3u1fbpfcp-jj-mark:3024:0:0:0:q75.awebp#?w=2672&h=1471&s=578071&e=png&a=1&b=ffffff)
 
 ### TypeScript
 
@@ -80,7 +73,6 @@ TS 的话除了微软官方的文档和 handbook 外，个人觉得最好的 Tut
 - [koa.js](https://link.juejin.cn?target=https%3A%2F%2Fkoajs.com%2F 'https://koajs.com/')
 - [fastify.js](https://link.juejin.cn?target=https%3A%2F%2Ffastify.io%2F 'https://fastify.io/')
 - [nest.js](https://link.juejin.cn?target=https%3A%2F%2Fnestjs.com%2F 'https://nestjs.com/')
-- [trpc](https://link.juejin.cn?target=https%3A%2F%2Ftrpc.io%2F 'https://trpc.io/')
 
 ### Vue
 
