--- a/data/blog/技术/文章/实战业务-编写技术文档.md
+++ b/data/blog/技术/文章/实战业务-编写技术文档.md
@@ -1,3 +1,14 @@
+---
+title: '业务:写一份技术文档'
+date: '2024/7/5'
+lastmod: '2024/7/5'
+tags: [业务]
+draft: false
+summary: '技术文档'
+images: ['https://cdn.jsdelivr.net/gh/SilverComet7/image-bed@main/blog/20240604145505.png']
+layout: PostLayout
+---
+
 # 业务背景
 
 领导说需要写一份技术文档，给了个参考流程，让我改造成一份通用类型的技术文档。
