--- a/data/blog/商业思维/国内外软件横向对比.md
+++ b/data/blog/商业思维/国内外软件横向对比.md
@@ -2,12 +2,12 @@
 title: '国内外 app 类似领域分类'
 date: '2024/6/7'
 lastmod: '2024/6/7'
-tags: [杂项]
+tags: [app]
 draft: false
 images: []
 layout: PostLayout
 ---
 
-| 类别 | 国内 app | 国外 app |
-| :--: | :------: | :------: |
-| 电商 |   淘宝   | shopify  |
+| 类别 |  国内 app   | 国外 app |
+| :--: | :---------: | :------: |
+| 电商 | 淘宝 / 京东 | shopify  |
