--- a/data/blog/技术/文章/实战业务-编写技术文档.md
+++ b/data/blog/技术/文章/实战业务-编写技术文档.md
@@ -19,7 +19,7 @@ layout: PostLayout
 
 # 在线转换网站
 
-用了些在线转换工具，发现有些不太好用，比如有些图片无法一起上传转换，还有些格式转换不太准确。
+> 用了些在线转换工具，发现有些不太好用，比如有些图片无法一起上传转换，还有些格式转换不太准确。
 
 虽然最终也是通过 PDF 转 md 的工具，将 PDF 转成 md 格式，然后再用 vscode 编辑器进行编辑。
 
@@ -95,3 +95,5 @@ layout: PostLayout
 1. 第一次编写技术文档
 2. 很多在线转换工具，但是转换效果都差强人意，还是 vscode 扩展插件好使，
 3. 发现了 markdown 也有很多方言语法，增加心智负担
+
+[参考](https://kimtanyo.github.io/post/markdown-yu-fa-da-quan/#1)
