fix: build error

--- a/data/other/不同赛道/自媒体.md
+++ b/data/other/不同赛道/自媒体.md
@@ -1,18 +1,19 @@
+# 关于起号
+
+1. 支持虚拟号
+1. 方便找回
+
+#
+
 1. 搬运号
 2. 赛道-伪原创对标号 - 5-20s
    1. 游戏
-      1. 3DM / 游民星空
-      2. 小黑盒
-      3. IGN
-      4. steam / epic
-      5. 国内的
    2. 程序
    3. 新闻信息差
-   4. 小语种
-   5. 网赚类
-   6. 美女号
-   7. 文案-故事-话题
-   8. 人物传记-笔记-一言类
+   4. 网赚-分享
+   5. 美女号
+   6. 文案-故事-话题
+   7. 人物传记-笔记-读书号
 3. 通用
    1. 资讯合集
    2. 搞笑
@@ -31,7 +32,7 @@
    10. 微博
    11. 知乎
    12. tiktok
-5. 仿-同行是最好的老师-找对标账号素材
+5. 仿-找对标账号素材
    1. 无真人出镜
    2. 不带 V
    3. 最好无水印
@@ -39,8 +40,8 @@
    1. 提取视频 - 去水印
    2. 提取图片 - 去水印
    3. 去音轨， 声音改造
-   4. AI 助手 仿写底稿文案原创
-   5. AI 助手 视频
+   4. AI 仿写底稿文案过原创
+   5. AI 视频过原创
 7. 支持多平台分发
 8. 自定义图床 CDN 改图片
 9. 自动检测错别字
@@ -50,7 +51,7 @@
 13. 带货 橱窗
 14. 广告
 
-# 自动
+# linux do AI 自动发
 
 1.定时从新闻来源收集新闻使用在线 api 或本地 llm 处理成向量数据然后存储到向量数据库
 
@@ -90,9 +91,9 @@
 3. 检查+标题
 4. 分发自媒体平台
 
-# 爆款因素-利它属性
+# 爆款因素
 
-1. 悬念
-2. 对比
-3. 好奇
-4.
+1. 悬念设问
+2. 利它性
+3. 对比
+4. 好奇
