--- a/data/other/游戏/永劫无间手游/新手入坑指南.md
+++ b/data/other/游戏/永劫无间手游/新手入坑指南.md
@@ -1,7 +1,7 @@
-# 背书
+# 资质展示
 
-段位展示
-150h
+段位
+游戏时长：166h
 
 # 游戏类型
 
@@ -9,12 +9,27 @@
 
 1. 生存
 2. 娱乐
+   1. 论剑
+   2. 战鬼
+   3.
 
 # 地图介绍
 
-1. 资源
-2. 道具
-3. 任务
+1. 高资源点
+   1. 蓝堆-
+   2. 绿堆-
+   3. 金堆-
+2. 道具-商店介绍
+   1. 地煞符
+   2. 飞索
+   3. 药膏
+   4. 回元散
+   5. 随机魂玉
+   6. 加耐久
+3. 攻城弩
+4. 封膜结界
+5. 任务
+6. 锦鲤
 
 # 游戏外基础知识介绍
 
@@ -23,16 +38,21 @@
    1. 近战
    2. 远程
 3. 潜能加点
+   1. 红色
+   2. 蓝色
+   3. 绿色
 4. 博弈技巧
+   1. A
+   2. 蓄力 1.0 1.5 2.0
+   3. 蓝顶
+   4. 振刀
+      1. 跳振
+      2. 后撤振
+      3. 闪一振二
 5. 氪金点-时装
 
 # 进阶知识
 
-1. 3 种对抗方式
-   1. A
-   2. 蓄力
-   3. 振刀
-2. 闪避
-   1. 空中蓄力
-   2. 空中漫步
-3. 英雄进阶
+1. 空中蓄力
+2. 空中漫步
+3. 基础连招
