--- a/data/other/电子产品/电脑软件使用.md
+++ b/data/other/电子产品/电脑软件使用.md
@@ -103,10 +103,21 @@
 ### 外设和口子识别一览
 
 1. 键盘
-2. 音响-耳机
-3. 鼠标
-4. 显示屏
-5. 扩展坞 + 理线器 + 折叠
+2. 音响
+3. 耳机
+4. 鼠标
+5. 显示屏
+6. 扩展坞 + 理线器 + 折叠
+7. 接口
+   dp
+   hdmi
+   dvi
+   vga
+   Thunderbolt
+   usb-
+8. 蓝牙
+9. 2.4G 插口
+10. 无线网卡
 
 ![](https://secure2.wostatic.cn/static/eUE17pFF5sbaK6QH6QynvP/image.png?auth_key=1723001315-42pQtaArGFa37VYVrKh89c-0-b2ff0210761432b26076723cfea42497)
 
