--- a/data/other/不同赛道/自媒体.md
+++ b/data/other/不同赛道/自媒体.md
@@ -1,25 +1,30 @@
-# 关于起号
+# 关于号
 
+1. 手机号+实名优先
 1. 支持虚拟号
-1. 方便找回
 
 #
 
 1. 搬运号
-2. 赛道-伪原创对标号 - 5-20s
+1. 薅羊毛号-抓取各大创作者中心的有奖活动，分类计数
+1. 赛道-伪原创对标号 - 5-20s
    1. 游戏
+      1. 新手入门教学
+      2. 攻略
+      3. 全流程实况
+      4. 搞笑
    2. 程序
-   3. 新闻信息差
-   4. 网赚-分享
-   5. 美女号
-   6. 文案-故事-话题
-   7. 人物传记-笔记-读书号
-3. 通用
+   <!-- 3. 新闻信息差分享 -->
+   3. 网赚-分享
+   4. 美女号
+   5. 文案-故事-话题
+   6. 人物传记-笔记-读书号
+1. 通用
    1. 资讯合集
    2. 搞笑
    3. 排行榜
    4. 数据分析图谱类
-4. 多渠道运营
+1. 多渠道运营
    1. 小红书
    2. 抖音
    3. 快手
@@ -32,24 +37,24 @@
    10. 微博
    11. 知乎
    12. tiktok
-5. 仿-找对标账号素材
+1. 仿-找对标账号素材
    1. 无真人出镜
    2. 不带 V
    3. 最好无水印
-6. 复刻
+1. 复刻
    1. 提取视频 - 去水印
    2. 提取图片 - 去水印
    3. 去音轨， 声音改造
    4. AI 仿写底稿文案过原创
    5. AI 视频过原创
-7. 支持多平台分发
-8. 自定义图床 CDN 改图片
-9. 自动检测错别字
-10. 数据汇总
-11. 变现
-    1. 平台流量
-    2. 广告
-    3. 带货 橱窗
+1. 支持多平台分发
+1. 自定义图床 CDN 改图片
+1. 自动检测错别字
+1. 数据汇总
+1. 变现
+   1. 平台流量
+   2. 广告
+   3. 带货 橱窗
 
 # linux do AI 自动发
 
@@ -91,9 +96,8 @@
 3. 检查+标题
 4. 分发自媒体平台
 
-# 爆款因素
+# 爆款因素-常用手法
 
-1. 悬念设问
-2. 利它性
-3. 对比
-4. 好奇
+1. 利它性
+2. 好奇 3. 悬念 4. 对比
+3. 共鸣
