--- a/data/other/游戏/通用.md
+++ b/data/other/游戏/通用.md
@@ -33,3 +33,22 @@
 2. 酷炫帅的操作
 3. 精致画风美术
 4. 剧情与音乐
+
+
+
+# 搬砖的游戏 - 去DD373交易看看
+
+魔兽
+塔瑞斯
+DNF
+命运方舟
+火炬之光
+诛仙世界
+彩虹岛
+流放之路
+
+
+# 代练代肝的游戏 - 去代练通看看
+
+
+
