--- a/data/other/商业思维/方案.md
+++ b/data/other/商业思维/方案.md
@@ -28,6 +28,54 @@
 3. 国内外信息差
 4. 体力 - 以数量或自动化重复劳动
 
+
 # 运营
 
 1.  同类型方式优势特性排行对比 - 统一分发（优先龙头流量）
+
+
+
+
+
+# 网赚
+
+项目参考：一些网赚博主
+
+## 重点需了解平台机制
+
+注册机制
+违规机制
+无风险引流机制
+流量机制
+推广变现机制
+
+## 项目
+
+1. 网盘拉新
+2. 视频制作
+3. 闲鱼 拼多多电商虚拟资料
+4. 游戏打金-追热门游戏
+5. 推广
+
+## 目前紧急的
+
+1. 浙里办失业金补办
+2. 闲鱼2号虚拟资料上新-最好国外资料避免版权纠纷-擦边资料为主-容量大
+3. 夸克网盘拉新-申请扩容-资源分类分列表后整理成excel或在线文档-上下级分成
+4. 程序接单-闲鱼1号
+5. 找自媒体对标号-训练视频制作剪辑为后续内容方向服务
+6. 已经能产生收益效果的寻求自动化-百家号/头条号图文
+
+
+
+# 想要做的方向
+
+## 躺赚/较少的精力就能赚的
+1. 理财/资产钱生钱（房租）
+2. 下级推广收佣金
+3. 爆款视频引流
+
+## 钱特别多的领域
+1. web3
+2. 跨境
+3. 金融
