--- a/data/other/商业思维/方案.md
+++ b/data/other/商业思维/方案.md
@@ -29,15 +29,20 @@
 4. 体力 - 以数量或自动化重复劳动
 
 
-# 运营
+#  优惠合集比价去哪找
 
-1.  同类型方式优势特性排行对比 - 统一分发（优先龙头流量）
+1. 打车 - 高德+滴滴
+2. 火车 - 12306
+3. 飞机 - 携程
+4. 订酒店 - 携程 华住会 
+5. 订外卖 - 美团 饿了么
+6. 订电影 - 猫眼 淘票票
+7. 订演唱会 - 猫眼 淘票票
+万能的闲鱼 淘宝
 
 
 
-
-
-# 网赚
+# 副业
 
 项目参考：一些网赚博主
 
@@ -46,8 +51,14 @@
 注册机制
 违规机制
 无风险引流机制
-流量机制
+流量推荐机制
 推广变现机制
+
+## 工具 
+
+自动养号工具
+寻找对标账号工具
+图文/视频-批量分发工具
 
 ## 项目
 
@@ -61,7 +72,7 @@
 
 1. 浙里办失业金补办
 2. 闲鱼2号虚拟资料上新-最好国外资料避免版权纠纷-擦边资料为主-容量大
-3. 夸克网盘拉新-申请扩容-资源分类分列表后整理成excel或在线文档-上下级分成
+3. 夸克网盘拉新-申请扩容-资源分类分列表后整理成excel或在线文档-
 4. 程序接单-闲鱼1号
 5. 找自媒体对标号-训练视频制作剪辑为后续内容方向服务
 6. 已经能产生收益效果的寻求自动化-百家号/头条号图文
@@ -73,7 +84,6 @@
 ## 躺赚/较少的精力就能赚的
 1. 理财/资产钱生钱（房租）
 2. 下级推广收佣金
-3. 爆款视频引流
 
 ## 钱特别多的领域
 1. web3
