--- a/data/other/每日计划.md
+++ b/data/other/每日计划.md
@@ -4,7 +4,7 @@
 
 1. 计划规划
 2. 英语语料
-3. 副业探索可行性
+3. 副业探索
 4. 理财知识
 5. 看书
 
@@ -24,14 +24,6 @@
 # 按集合
 
 ## 理财
-
-### 股
-
-1. 资讯
-2. 技术面分析
-3. 是否操作
-
-### 债
 
 ## 副业
 
