--- a/data/other/不同赛道/离职后计划.md
+++ b/data/other/不同赛道/离职后计划.md
@@ -21,14 +21,28 @@
 
 # 娱乐
 
-1. 旅游
-2. 玩的-工作日下午很好
-3. 游戏-记得录屏或直播
+1. 工作日旅游
+2. 游戏-记得录屏或直播
 
 # 杂碎
 
 1. 卡-充话费
 2. 还款
    1. 京东白条
-   2. 云闪付
-3. 领失业金
+
+
+# 每日
+
+1. 大号：
+   1. 游戏自媒体活动
+      1. B站  抖音
+2. 小号-网盘拉新/APP拉新
+   1. 文章图文
+      1. 小红书  
+      2. B站专栏
+      3. 抖音
+      4. 微博
+      5. 闲鱼
+      6. 各大资源分享区
+   2. 软件分享视频
+   3. 
