--- a/data/other/不同赛道/激励创作.md
+++ b/data/other/不同赛道/激励创作.md
@@ -2,9 +2,7 @@
 2. 百家号: https://baijiahao.baidu.com/author/eco/tasksystem/getSquareMissionList?page_no=1&page_size=18&task_type=-1&task_origin=all&article_type=-1&task_domain=%E6%B8%B8%E6%88%8F&task_attend=1&collection_flag=&task_name=&task_classify=1&from=pc_square
 3. 抖音
 4. youtube
-
-
-
+5. TapTap
 
 
 
