--- a/data/other/商业思维/副业思路方案.md
+++ b/data/other/商业思维/副业思路方案.md
@@ -1,4 +1,8 @@
-# 方案
+无论做什么项目，先找3个对标的同行
+无论依靠什么平台，搞流量最后都期望转到私域里，毕竟万一被封账号就全部丢失了
+
+
+# 程序向副业方案
 
 1. 公域流量 - 垂直领域影响力打造 - 先起小号练号（玩懂流量）- 成交后尽量每日转移
    1. 带货 广告
@@ -42,14 +46,12 @@
 
 
 
-# 副业
-
-项目参考：一些网赚博主
+# 自媒体，电商向副业
 
 ## 重点需了解平台机制
 
 注册机制
-违规机制
+违规词，限流，起号，养号机制
 无风险引流机制
 流量推荐机制
 推广变现机制
@@ -57,22 +59,22 @@
 ## 工具 
 
 自动养号工具
-寻找对标账号工具
 图文/视频-批量分发工具
+自动发货工具
 
 ## 项目
 
-1. 网盘拉新
-2. 视频制作
+1. APP拉新
+2. 游戏激励活动视频制作
 3. 闲鱼 拼多多电商虚拟资料
-4. 游戏打金-追热门游戏
-5. 推广
+4. 游戏打金-追热门游戏-直播
+5. 商业推广，广告
 
 ## 目前紧急的
 
 1. 浙里办失业金补办
 2. 闲鱼2号虚拟资料上新-最好国外资料避免版权纠纷-擦边资料为主-容量大
-3. 夸克网盘拉新-申请扩容-资源分类分列表后整理成excel或在线文档-
+3. 夸克网盘拉新-申请扩容-资源分类分列表后整理成excel或在线文档
 4. 程序接单-闲鱼1号
 5. 找自媒体对标号-训练视频制作剪辑为后续内容方向服务
 6. 已经能产生收益效果的寻求自动化-百家号/头条号图文
@@ -81,11 +83,50 @@
 
 # 想要做的方向
 
+
 ## 躺赚/较少的精力就能赚的
 1. 理财/资产钱生钱（房租）
 2. 下级推广收佣金
 
-## 钱特别多的领域
+## 钱特别多的领域-来钱快的
 1. web3
 2. 跨境
 3. 金融
+
+
+# 重点
+
+时间与精力的规划
+能躺赚的多花点精力
+
+
+## 开源部分
+1. B站游戏视频奖励活动  200
+2. 游戏打金-火炬打火   16
+3. 各种APP拉新做单-网盘拉新转存  2+0.3*5= 3.5
+4. 带下级团队
+5. 闲鱼电商-虚拟资料选品  1
+6. 程序开发  500
+7. APP自动掘金薅羊毛
+8. 失业金
+
+
+## 节流部分
+1. 霸王餐
+
+
+## 账号1
+
+1. 抖音/B站游戏激励
+
+
+## 账号2
+
+1. 闲鱼虚拟电商
+   1. 百度网盘分享每日上新
+2. 悟空/红果短剧APP/夸克搜索拉新
+   1. 小红书
+3. 网盘资源
+   1. 抖音复制分享
+   2. B站分享
+4. 
