--- a/data/other/游戏/火炬之光/打宝.md
+++ b/data/other/游戏/火炬之光/打宝.md
@@ -1,16 +1,15 @@
 <!-- 表格 -->
 
-
 1. 赛季
 2. 梦魇
 3. 魔方 - 刷神格板子
-4. 珍品 - 100级装备 
+4. 珍品 - 100 级装备
 5. 黑潮
 6. 黑帆 - 追忆有丝-抢货追忆
 7. 巨力 - 难度高 -收益罗盘
 8. 机械
 9. 征战 - 不刷
-10. 怪谈 - 触媒技能 / 
+10. 怪谈 - 触媒技能 /
 11. 狩猎 - +碎星 速刷
 12. 迷城 - 不熟 - 刷蜡烛
 13. 玩偶 - 狗都不玩
@@ -18,10 +17,21 @@
 15. 爬塔 - 难度 - 记忆卡学者的奇思
 16. 攻坚 - 看脸
 
-宠物：白灵  木令人
-
-魔方
-黑帆
-黑潮 
 
 几率触发天赋类别用罗盘开
+
+# 地图最短路径 开荒碎星开图
+
+1.  寒冰:街区
+2.  炎海:龙眠峡谷
+3.  钢铁:云间高墙
+4.  雷鸣:祷告教堂 圣厅
+5.  丛林
+
+生存任务 ：
+
+1. 前期双开速刷 K7-0 菱纱+灰烬+黑帆自给自足 k7 过了速刷 通货：眼睛/黑帆碎序/迷城材料/雪纸/狩猎/碎星 68+2 点数 K7 万界过了后的点数
+2. 前中期看 K8 门票价格 3-4 天后提示 K8 梦魇 K8 门票 瓦的材料 瓦中的装备 倒腾 T1 装备 触媒技能 魂烛 赛季天命石
+3. 中后期 7 天后 U8 各大首领门票 深空票 珍品底子 神格石板 毕业暗金，热门职业装备
+
+梦语 眼睛 珍品 追忆 罗盘 信标 触媒技能 魂烛
